--- a/src/components/stylesheets/BulletinBox.css
+++ b/src/components/stylesheets/BulletinBox.css
@@ -47,7 +47,10 @@
   font-variant: small-caps;
   font-weight: bold;
   color: #666;
-  font-size: 0.9em;
+  /*APRIL FOOL'S*/
+  font-size: 0.8em;
+  /*STANDARD*/
+  /*font-size: 0.9em;*/
   text-align: center;
 }
 
